# ridges_local

./: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.test  MEADRE.md  MINESHAFT.md  README.md  SQLALCHEMY_MIGRATION.md  agent-socket.py  agent.py  coverage.xml  docker-compose.yml  logging_utils.py  main.py  mineshaft.py  pyproject.toml  requirements-mineshaft.txt  requirements.txt  ridges-localnet.sh  ridges.py  run_upload_until_complete.py  setup.py  test.ipynb  validator_auto_update.sh
api/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/src/: main.py
api/src/backend/: README_state_machine.md  agent_machine.py  db_manager.py  endpoints.py  entities.py  evaluation_machine.py  health_monitor.py  internal_tools.py  postgres_schema.sql  queries.py  queries_old.py  queries_old.pyi  screener_machine.py  startup_recovery.py  state_machine.py  system_init.py  unified_operations.py  validator_machine.py
api/src/backend/queries/: agents.py  agents.pyi  bench_evaluation_runs.py  cleanup.py  cleanup.pyi  evaluation_runs.py  evaluation_runs.pyi  evaluation_sets.py  evaluation_sets.pyi  evaluations.py  evaluations.pyi  healthcheck.py  healthcheck.pyi  inference.py  inferences.pyi  open_users.py  open_users.pyi  queue.py  queue.pyi  scores.py  scores.pyi  statistics.py  statistics.pyi  weights.py  weights.pyi
api/src/db/: __init__.py  example_usage.py  operations.py  postgres_schema.sql  s3.py  sqlalchemy_manager.py  sqlalchemy_models.py  unified_operations.py
api/src/endpoints/: agent_summaries.py  agents.py  benchmarks.py  healthcheck.py  logs.py  open_users.py  retrieval.py  scoring.py  system_status.py  upload.py
api/src/examples/: process_tracking_demo.py
api/src/models/: __init__.py  evaluation.py  screener.py  validator.py
api/src/socket/: server.py  server_helpers.py  websocket_manager.py
api/src/socket/handlers/: __init__.py  handle_evaluation_run_log.py  handle_evaluation_run_logs.py  handle_finish_evaluation.py  handle_get_next_evaluation.py  handle_heartbeat.py  handle_ping.py  handle_set_weights.py  handle_start_evaluation.py  handle_system_metrics.py  handle_update_evaluation_run.py  handle_upsert_evaluation_run.py  handle_validator_info.py  handle_validator_version.py  message_router.py
api/src/utils/: agent_summary_generator.py  auth.py  chutes.py  code_checks.py  config.py  db_wrapper.py  logging_utils.py  models.py  nodes.py  process_tracking.py  refresh_subnet_hotkeys.py  s3.py  similarity_checker.py  slack.py  subtensor.py  threshold_scheduler.py  top_agent_code.py  top_agents_manager.py  upload_agent_helpers.py  validator_auth.py  weights.py
api/top/: test_agent.py
api/top/rank_4/: agent.py
api/top/rank_5/: agent.py
dashboard/: Home.py  README.md  pyproject.toml
datadog/: .env.example  config.py  datadog.py  metrics.py
loggers/: .env.example  datadog.py  logging_utils.py  process_tracking.py
logging/: logging_utils.py
miner/: .env.example  README.md  __init__.py  agent.py  agent_calvin.py  dependancies.py  loop.py  main.py
proxy/: .env.example  README.md  __init__.py  chutes_client.py  config.py  database.py  error_tracking.py  main.py  models.py
ridges_logging/: logging_utils.py
tests/: .coverage  README.md  TEST_SETUP_INSTRUCTIONS.md  __init__.py  conftest.py  docker-compose.test.yml  github-actions-test.yml  init-test-db.sql  pytest.ini  test.sh  test_endpoints_integration.py  test_endpoints_simple.py  test_endpoints_sqlite.py  test_endpoints_unit.py  test_miner_agent_flow.py  test_real_api.py  test_threshold_function.py  test_threshold_scoring_simple.py  test_upload_attempts_simple.py  test_upload_tracking.py  test_upload_tracking_unit.py  test_weights_setting.py
(+120 files in other folders)
