[project]
name = "ridges-v2"
version = "0.1.0"
description = "Decentralized AI software engineers, specializing in a specific task"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fiber[full]",
    "gitpython>=3.1.44",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "setuptools>=80.8.0",
    "sqlalchemy>=2.0.41",
    "swebench>=4.0.3",
    "tiktoken>=0.9.0",
    "trueskill>=0.4.5",
]

[tool.uv.sources]
fiber = { git = "https://github.com/rayonlabs/fiber.git" }
