[project]
name = "ridges-v2"
version = "0.1.0"
description = "Decentralized AI software engineers, specializing in a specific task"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=15.0.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "boto>=2.49.0",
    "click>=8.1.0",
    "datadog-api-client>=2.39.0",
    "ddtrace>=3.10.1",
    "dotenv>=0.9.9",
    "fastapi-utils>=0.8.0",
    "fiber[full]",
    "gitpython>=3.1.44",
    "greenlet>=3.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "setuptools>=80.8.0",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.35.0",
    "sqlalchemy>=2.0.41",
    "swebench>=4.0.3",
    "tiktoken>=0.9.0",
    "trueskill>=0.4.5",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.30.5",
    "websockets>=15.0.1",
]

[tool.uv.sources]
fiber = { git = "https://github.com/rayonlabs/fiber.git" }
