[project]
name = "ridges-v2"
version = "0.1.0"
description = "Decentralized AI software engineers, specializing in a specific task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=15.0.0",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "boto>=2.49.0",
    "click>=8.1.0",
    "coverage>=7.10.2",
    "datadog-api-client>=2.39.0",
    "ddtrace>=3.10.1",
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "fiber[full]",
    "gitpython>=3.1.44",
    "greenlet>=3.1.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mypy>=1.17.1",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.0",
    "psutil>=7.0.0",
    "pydantic>=2.9.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-postgresql>=7.0.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "ruff>=0.12.7",
    "setuptools>=80.8.0",
    "slack-bolt>=1.23.0",
    "slack-sdk>=3.35.0",
    "sqlalchemy>=2.0.41",
    "swebench==4.0.3",
    "tiktoken>=0.9.0",
    "trueskill>=0.4.5",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.30.5",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
fiber = { git = "https://github.com/rayonlabs/fiber.git" }

# Python formatting and linting configuration
[tool.black]
line-length = 150

[tool.flake8]
max-line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
