[project]
name = "ridges-api-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "boto3>=1.38.33",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "python-multipart==0.0.12",
    "requests>=2.32.4",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
